--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,17 @@
 buildscript {
     ext {
-        compose_version = '1.0.1'
+        compose_version = '1.1.1'
+        hilt_version = '2.40.1'
+        room_version = '2.4.2'
+    }
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
